Unit Conversion From KMH to MPH

--- a/hw1/Playground.ipynb
+++ b/hw1/Playground.ipynb
@@ -66,7 +66,11 @@
     "                speedPattern = r'(\\d+) KMH'\n",
     "                val_team1 = tryParse(speedPattern, str_team1)\n",
     "                val_team2 = tryParse(speedPattern, str_team2)\n",
-    "\n",
+	"                if (val_team1 is not None) or (val_team2 is not None):\n",
+    "                    val_team1 = round(val_team1 * .62, 2)\n",
+    "                    val_team2 = round(val_team2 * .62, 2)\n",
+    "            \n",
+    "			 \n",
     "            if (val_team1 is None) or (val_team2 is None):\n",
     "                try:\n",
     "                    val_team1 = int(str_team1)\n",
