--- a/hw1/RevivedClassifier.ipynb
+++ b/hw1/RevivedClassifier.ipynb
@@ -12,7 +12,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\mu: \\ \\ mean;\\ \\ \\sigma^2:\\ \\ standard\\ deviation\n",
+    "\\mu: \\ \\ mean;\\ \\ \\sigma^2:\\ \\ variance\n",
     "$$\n",
     "\n",
     "#### Conditional probability\n",
