--- a/hw1/Classifier.ipynb
+++ b/hw1/Classifier.ipynb
@@ -1,72 +1,161 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "# References\n",
+    "\n",
+    "#### Normal distribution for continous variables\n",
+    "$$\n",
+    "P(x) = \\frac{1}{{\\sigma \\sqrt {2\\pi } }}exp(\\frac{ - \\left( {x - \\mu } \\right)^2}{2\\sigma ^2 })\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mu: \\ \\ mean;\\ \\ \\sigma^2:\\ \\ variance\n",
+    "$$\n",
+    "\n",
+    "#### Conditional probability\n",
+    "\n",
+    "$$\n",
+    "P(X \\mid C) = \\frac{P(C \\mid X)P(X)}{P(C)}\n",
+    "$$\n",
+    "\n",
+    "#### Bayes' classifier for selecting a class\n",
+    "\n",
+    "$$\n",
+    "P(C_{i}) \\prod_{k}^{} P(X_{i}^k \\mid C_i)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80.77"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Classifier logic\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "def Mean(bag):\n",
-    "    return sum(bag) / float(len(bag))\n",
+    "class Classifier:\n",
+    "    def __init__(self, training):\n",
+    "        # We are going to build two classifiers to help us classify winning team. \n",
+    "        #   1st classifier will calculate team 1's winning probability\n",
+    "        #   2nd classifier will calculate team 2's winning probability\n",
+    "        \n",
+    "        # We split training data by Match Winner column because we would like to\n",
+    "        # infer the classifiers' coefficients(mean and variance) from related training data\n",
+    "        #   1st classifier is fed with statistics of matches in which team 1 won\n",
+    "        #   2nd classifier is fed with statistics of matches in which team 2 won\n",
+    "        grouped = training.groupby('Match Winner')\n",
+    "        fstTraining, sndTraining = grouped.get_group(0), grouped.get_group(1)\n",
+    "\n",
+    "        # remove Match Winner column from training data sets\n",
+    "        fstTraining = fstTraining[fstTraining.columns[:-1]]\n",
+    "        sndTraining = sndTraining[sndTraining.columns[:-1]]\n",
+    "\n",
+    "        # infer first classifier's coefficients by feeding it with team 1 winning matches statistics\n",
+    "        self.fstClassifierCofs = [ self.__normalDFCofs(fstTraining[col]) for col in fstTraining.columns ]\n",
+    "\n",
+    "        # infer second classifier's coefficients by feeding it  with team 2 winning matches statistics\n",
+    "        self.sndClassifierCofs = [ self.__normalDFCofs(sndTraining[col]) for col in sndTraining.columns ]\n",
     "\n",
     "\n",
-    "def Variance(bag):\n",
-    "    mean = Mean(bag)\n",
-    "    return sum([ pow(i - mean, 2) for i in bag ]) / float(len(bag) - 1)\n",
+    "    # calculate and return winning probability of each team\n",
+    "    def classify(self, x):\n",
+    "        fstPr, sndPr = 1, 1\n",
+    "\n",
+    "        for idx, val in enumerate(x):\n",
+    "            fstMean, fstVariance = self.fstClassifierCofs[idx]\n",
+    "            sndMean, sndVariance = self.sndClassifierCofs[idx]\n",
+    "            \n",
+    "            fstPr *= self.__normalDF(val, fstMean, fstVariance)\n",
+    "            sndPr *= self.__normalDF(val, sndMean, sndVariance)\n",
+    "            \n",
+    "        return {0: fstPr, 1: sndPr}\n",
     "\n",
     "\n",
-    "def normalDFCof(bag):\n",
-    "    return (Mean(bag), Variance(bag))\n",
+    "    # calculate mean and variable of given data set\n",
+    "    def __normalDFCofs(self, bag):\n",
+    "        return (self.__mean(bag), self.__variance(bag))\n",
     "\n",
     "\n",
-    "def normalDF(x, mean, var):\n",
-    "    return np.exp(-pow(x - mean, 2) / (2 * var)) / np.sqrt(2 * np.pi * var)\n",
+    "    # calculate mean of given data set\n",
+    "    def __mean(self, bag):\n",
+    "        return sum(bag) / float(len(bag))\n",
     "\n",
     "\n",
-    "def classify(x, training):\n",
-    "    # group training data by match winner\n",
-    "    grouped = training.groupby('Match Winner')\n",
-    "    fst, snd = grouped.get_group(0), grouped.get_group(1)\n",
-    "\n",
-    "    # remove Match Winner column\n",
-    "    fst = fst[fst.columns[:-1]]\n",
-    "    snd = snd[snd.columns[:-1]]\n",
-    "\n",
-    "    # create normal density function for each column\n",
-    "    fstDFCof = [ normalDFCof(fst[col]) for col in fst.columns ]\n",
-    "    sndDFCof = [ normalDFCof(snd[col]) for col in snd.columns ]\n",
-    "\n",
-    "    # calculate probability of each group\n",
-    "    fstPr, sndPr = 1, 1\n",
-    "    for i, v in enumerate(x):\n",
-    "        fstPr *= normalDF(v, fstDFCof[i][0], fstDFCof[i][1])\n",
-    "        sndPr *= normalDF(v, sndDFCof[i][0], sndDFCof[i][1])\n",
-    "\n",
-    "    return {0: fstPr, 1: sndPr}\n",
+    "    # calculate variance of given data set\n",
+    "    def __variance(self, bag):\n",
+    "        mean = self.__mean(bag)\n",
+    "        return sum([ pow(iteam - mean, 2) for iteam in bag ]) / float(len(bag) - 1)\n",
     "\n",
     "\n",
-    "df = pd.read_csv('ausopen.csv')\n",
+    "    # infer probability of a random variable x from normal distribution given mean and variance\n",
+    "    def __normalDF(self, x, mean, variance):\n",
+    "        return np.exp(-pow(x - mean, 2) / (2 * variance)) / np.sqrt(2 * np.pi * variance)\n",
+    "\n",
+    "\n",
+    "# Utility functions\n",
+    "import numpy as np\n",
+    "\n",
+    "def infer(score):\n",
+    "    if np.maximum(score[0], score[1]) == score[0]:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
+    "\n",
+    "def hit(classifier, data):\n",
+    "    inputs  = data[data.columns[:-1]].values\n",
+    "    winners = data[data.columns[-1]].values\n",
+    "\n",
+    "    scores = [classifier.classify(x) for x in inputs]\n",
+    "    inferredWinners = [infer(score) for score in scores]\n",
+    "\n",
+    "    return (inferredWinners == winners)\n",
+    "\n",
+    "\n",
+    "def accuracy(classifier, data):\n",
+    "    hits = hit(classifier, data).tolist()\n",
+    "\n",
+    "    return round(100 * hits.count(True) / float(len(hits)), 2)\n",
+    "\n",
+    "\n",
+    "# load US opening matches from remote repository\n",
+    "usdf = pd.read_csv('https://raw.githubusercontent.com/cnsgcu/CS5567/master/hw1/usopen.csv')\n",
+    "\n",
+    "# load AUS opening matches from remote repository\n",
+    "ausdf = pd.read_csv('https://raw.githubusercontent.com/cnsgcu/CS5567/master/hw1/ausopen.csv')\n",
+    "\n",
+    "# combine US and AUS opening matches' statistics\n",
+    "df = ausdf.append(usdf, ignore_index=True)\n",
     "\n",
     "grouped = df.groupby('Match Winner')\n",
     "fst, snd = grouped.get_group(0), grouped.get_group(1)\n",
     "\n",
-    "training = fst.head(5).append(snd.head(5))\n",
+    "testing = fst.tail(14).append(snd.head(12))\n",
     "\n",
-    "x = snd[6:7].values.tolist()[0][:-1]\n",
+    "# 10 team 1 winning matches and 10 team 2 winning matches\n",
+    "training = fst.head(10).append(snd.head(10))\n",
     "\n",
-    "scores = classify(x, training)\n",
+    "classifier = Classifier(training)\n",
     "\n",
-    "print(scores)\n",
-    "\n",
-    "if np.maximum(scores[0], scores[1]) == scores[0]:\n",
-    "    print(\"First team\")\n",
-    "else:\n",
-    "    print(\"Second team\")"
+    "accuracy(classifier, testing)"
    ]
   }
  ],
