--- a/hw2/NNet.ipynb
+++ b/hw2/NNet.ipynb
@@ -8,8 +8,17 @@
    },
    "outputs": [],
    "source": [
-    "from nnet import MLPNNet\n",
-    "\n",
+    "from nnet import MLPNNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "training_set = [\n",
     "    ([0, 0], 0),\n",
     "    ([0, 1], 1),\n",
@@ -64,6 +73,52 @@
    ],
    "source": [
     "tnn.predict([0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "training_set = [\n",
+    "    ([2, 1], [1, 0]),\n",
+    "    ([3, 2], [1, 0]),\n",
+    "    ([4, 2], [1, 0]),\n",
+    "    ([1, 2], [0, 1]),\n",
+    "    ([2, 3], [0, 1]),\n",
+    "    ([2, 4], [0, 1]),\n",
+    "]\n",
+    "\n",
+    "tnn = MLPNNet(training_set, hidden_layers=[2])\n",
+    "\n",
+    "tnn.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.],\n",
+       "       [ 0.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.round(tnn.predict([3,1]))"
    ]
   }
  ],
